composer update - phpunit and prophecy packages added

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "friendsofsymfony/rest-bundle": "^2.1",
-        "symfony/serializer": "^3.1"
+        "symfony/serializer": "^3.1",
+        "phpunit/phpunit": "^6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
@@ -31,7 +32,8 @@
         "hautelook/alice-bundle": "^2.0@beta",
         "nelmio/alice": "^3.0@beta",
         "theofidry/alice-data-fixtures": "^1.0@beta",
-        "doctrine/data-fixtures": "^1.2"
+        "doctrine/data-fixtures": "^1.2",
+        "phpspec/prophecy": "^1.6"
     },
     "scripts": {
         "symfony-scripts": [
