--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ php:
 services:
   - docker
 
-install:
-- sh docker.sh
-
 before_script:
+  - mysql -e 'create database api_test;'
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
   - "mkdir -p ~/.composer"
   - composer self-update
   - composer install --prefer-source --optimize-autoloader
