--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,9 +4,9 @@
 parameters:
     database_host: mysql
     database_port: 3306
-    database_name: symfony
-    database_user: user
-    database_password: 123
+    database_name: api_test
+    database_user: root
+    database_password:
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
