--- a/app/config/parameters_travis.yml.dist
+++ b/app/config/parameters_travis.yml.dist
@@ -2,11 +2,11 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host: mysql
+    database_host: localhost
     database_port: 3306
-    database_name: symfony
-    database_user: user
-    database_password: 123
+    database_name: api_test
+    database_user: root
+    database_password:
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
