--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - composer self-update
   - composer install --dev
   - php app/console doctrine:schema:create --env=test
-  - php app/console hautelook:fixtures:load
+  - php app/console hautelook:fixtures:load -n --env=test
 
 script:
   - phpunit --configuration ./app/phpunit.xml.dist --coverage-text
